force-app/main/default/objects/Case/fields/TECH_first_quality_test__c.field-meta.xml
<CustomField>
    <fullName>TECH_first_quality_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH first quality test</label>
    <type>Checkbox</type>
</CustomField>