force-app/main/default/objects/Case/fields/Tech_Hashtag__c.field-meta.xml
<CustomField>
    <fullName>Tech_Hashtag__c</fullName>
    <description>Technical field to support the reporting of Cases based on Hashtags</description>
    <label>Tech_Hashtag</label>
    <length>250</length>
    <type>Text</type>
</CustomField>