force-app/main/default/objects/Case/fields/Tech_Milestone_Violation_closed__c.field-meta.xml
<CustomField>
    <fullName>Tech_Milestone_Violation_closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech Milestone Violation(closed)</label>
    <type>Checkbox</type>
</CustomField>