force-app/main/default/objects/Case/fields/Tech_Milestone_Violation_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Tech_Milestone_Violation_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick this checkbox when milestone is violated</description>
    <label>Tech Milestone Violation(In progress)</label>
    <type>Checkbox</type>
</CustomField>