force-app/main/default/objects/Case/fields/Tech_Test_not_used__c.field-meta.xml
<CustomField>
    <fullName>Tech_Test_not_used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_Test_not_used</label>
    <type>Checkbox</type>
</CustomField>