force-app/main/default/objects/Case/fields/Technical_issue__c.field-meta.xml
<CustomField>
    <fullName>Technical_issue__c</fullName>
    <inlineHelpText>A customer contacts you because he/she has a technical problem with the product. Indeed, it does not start. The customer received the product 10 days ago. What do you do?</inlineHelpText>
    <label>Technical issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>