force-app/main/default/objects/Case/fields/Testing_method__c.field-meta.xml
<CustomField>
    <fullName>Testing_method__c</fullName>
    <label>Testing method</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>