force-app/main/default/objects/Case/fields/Testing_software_used__c.field-meta.xml
<CustomField>
    <fullName>Testing_software_used__c</fullName>
    <label>Testing software used</label>
    <type>TextArea</type>
</CustomField>