force-app/main/default/objects/Case/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <formula>Account.Tier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier</label>
    <type>Text</type>
</CustomField>