force-app/main/default/objects/Case/fields/Trigger_Milestones_Entitlements__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Milestones_Entitlements__c</fullName>
    <label>Trigger Milestones/Entitlements</label>
    <type>DateTime</type>
</CustomField>