force-app/main/default/objects/Case/fields/Type_of_company__c.field-meta.xml
<CustomField>
    <fullName>Type_of_company__c</fullName>
    <label>Type of company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto-entrepreneur</fullName>
            </value>
            <value>
                <fullName>Micro-entreprise (EI)</fullName>
            </value>
            <value>
                <fullName>Entreprise individuelle à responsabilité limitée (EIRL)</fullName>
            </value>
            <value>
                <fullName>Entreprise unipersonnelle à responsabilité limitée (EURL)</fullName>
            </value>
            <value>
                <fullName>Société d’exercice libéral à responsabilité limitée (SELARL)</fullName>
            </value>
            <value>
                <fullName>Société à responsabilité limitée (SARL)</fullName>
            </value>
            <value>
                <fullName>Société anonyme (SA)</fullName>
            </value>
            <value>
                <fullName>Société par actions simplifiée (SAS)</fullName>
            </value>
            <value>
                <fullName>Société par actions simplifiée unipersonnelle (SASU)</fullName>
            </value>
            <value>
                <fullName>Société en nom collectif (SNC)</fullName>
            </value>
            <value>
                <fullName>Société civile professionnelle (SCP)</fullName>
            </value>
            <value>
                <fullName>Société coopérative et participative (SCOP)</fullName>
            </value>
            <value>
                <fullName>Société coopérative d’intérêt collectif (SCIC)</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>