force-app/main/default/objects/Case/fields/Type_Skill__c.field-meta.xml
<CustomField>
    <fullName>Type_Skill__c</fullName>
    <label>Type Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Catalog</fullName>
            </value>
            <value>
                <fullName>Return Label</fullName>
            </value>
            <value>
                <fullName>Carrier Investigation</fullName>
            </value>
            <value>
                <fullName>Default Type</fullName>
            </value>
            <value>
                <fullName>Classic</fullName>
                <isActive>false</isActive>
                <label>Classic</label>
            </value>
            <value>
                <fullName>Services email</fullName>
                <isActive>false</isActive>
                <label>Services email</label>
            </value>
            <value>
                <fullName>Services form</fullName>
                <isActive>false</isActive>
                <label>Services form</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>