force-app/main/default/objects/Case/fields/Typology_of_claim__c.field-meta.xml
<CustomField>
    <fullName>Typology_of_claim__c</fullName>
    <label>Typology of claim</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client&apos;s fault</fullName>
            </value>
            <value>
                <fullName>Exclusion of warranty</fullName>
            </value>
            <value>
                <fullName>Merchant&apos;s fault</fullName>
            </value>
            <value>
                <fullName>Credit Note request</fullName>
            </value>
            <value>
                <fullName>Back Care issue</fullName>
            </value>
            <value>
                <fullName>Back Ship issue</fullName>
            </value>
            <value>
                <fullName>Catalog issue</fullName>
            </value>
            <value>
                <fullName>Back Office issue</fullName>
            </value>
            <value>
                <fullName>Could have been answered with FAQ article</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>API Bug</fullName>
                <isActive>false</isActive>
                <label>API Bug</label>
            </value>
            <value>
                <fullName>Info already in Notion</fullName>
                <isActive>false</isActive>
                <label>Info already in Notion</label>
            </value>
            <value>
                <fullName>Lack of training</fullName>
                <isActive>false</isActive>
                <label>Lack of training</label>
            </value>
            <value>
                <fullName>Misuse of SF</fullName>
                <isActive>false</isActive>
                <label>Misuse of SF</label>
            </value>
            <value>
                <fullName>Not related to SF</fullName>
                <isActive>false</isActive>
                <label>Not related to SF</label>
            </value>
            <value>
                <fullName>Notion article to update</fullName>
                <isActive>false</isActive>
                <label>Notion article to update</label>
            </value>
            <value>
                <fullName>Process exception</fullName>
                <isActive>false</isActive>
                <label>Process exception</label>
            </value>
            <value>
                <fullName>SF Bug</fullName>
                <isActive>false</isActive>
                <label>SF Bug</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>