force-app/main/default/objects/Case/fields/Unsubscribe_reason__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribe_reason__c</fullName>
    <label>Unsubscribe reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service is too expensive</fullName>
            </value>
            <value>
                <fullName>I already have an in-house repair resources</fullName>
            </value>
            <value>
                <fullName>I sell other products than smartphones</fullName>
            </value>
            <value>
                <fullName>I buy the products under warranty</fullName>
            </value>
            <value>
                <fullName>I&apos;m an expert already</fullName>
            </value>
            <value>
                <fullName>I just wanted to test the solution</fullName>
            </value>
            <value>
                <fullName>My logistic is outsourced</fullName>
            </value>
            <value>
                <fullName>I sell on other platforms</fullName>
            </value>
            <value>
                <fullName>Limited functionality</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Rebilling</fullName>
            </value>
            <value>
                <fullName>Refunds/carrier investigation are too long</fullName>
            </value>
            <value>
                <fullName>I use an integrator and Backship is not integrable</fullName>
            </value>
            <value>
                <fullName>Unhappy with the support</fullName>
            </value>
            <value>
                <fullName>Unhappy with the repair quality</fullName>
            </value>
            <value>
                <fullName>Unhappy with the repair rebounds (a repair that leads to a second repair need)</fullName>
            </value>
            <value>
                <fullName>Unhappy with BackCare</fullName>
            </value>
            <value>
                <fullName>Unhappy with the agents&apos; management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>