force-app/main/default/objects/Case/fields/Use_a_Supported_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Use_a_Supported_Carrier__c</fullName>
    <inlineHelpText>Do you work with one of the carriers listed in this document? Click here</inlineHelpText>
    <label>Use a Supported Carrier</label>
    <type>TextArea</type>
</CustomField>