force-app/main/default/objects/Case/fields/Use_of_Back_Ship_for_returns__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Back_Ship_for_returns__c</fullName>
    <inlineHelpText>You replied &quot;no&quot; to the previous question. Will you or do you want to use our internal service BackShip for return labels?</inlineHelpText>
    <label>Use of Back Ship for returns</label>
    <type>TextArea</type>
</CustomField>