force-app/main/default/objects/Case/fields/Use_of_flyers__c.field-meta.xml
<CustomField>
    <fullName>Use_of_flyers__c</fullName>
    <inlineHelpText>To sell on Back Market, it is required that all communication with the customer takes place on the after-sales service interface. It is forbidden to display any direct contact information in the parcel (flyers) nor on the invoice. Note that you can use BackCare our international outsourced after-sales service.</inlineHelpText>
    <label>Use of flyers</label>
    <type>TextArea</type>
</CustomField>