force-app/main/default/objects/Case/fields/Warranty_exclusion__c.field-meta.xml
<CustomField>
    <fullName>Warranty_exclusion__c</fullName>
    <inlineHelpText>To sell on Back Market, the seller commits to declare, explain and duly document any warranty exclusion within 3 days after reception and to ship back the product to customer within 2 days after that.</inlineHelpText>
    <label>Warranty exclusion</label>
    <type>TextArea</type>
</CustomField>