force-app/main/default/objects/Case/fields/What_is_the_current_process__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_current_process__c</fullName>
    <inlineHelpText>This field is populated for case reason = Project Proposition</inlineHelpText>
    <label>What is the current process?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>