force-app/main/default/objects/Case/fields/What_is_the_goal_of_the_project__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_goal_of_the_project__c</fullName>
    <inlineHelpText>This field is populated for case reason = Project Proposition</inlineHelpText>
    <label>What is the goal of the project?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>