force-app/main/default/objects/Case/fields/Which_marketplace_s__c.field-meta.xml
<CustomField>
    <fullName>Which_marketplace_s__c</fullName>
    <label>Which marketplace&apos;(s)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>