force-app/main/default/objects/Case/fields/Wrong_description__c.field-meta.xml
<CustomField>
    <fullName>Wrong_description__c</fullName>
    <inlineHelpText>Vous réceptionnez un produit non fonctionnel alors qu&apos;il devrait être fonctionnel selon la déclaration du client. Que faites-vous ?</inlineHelpText>
    <label>Wrong description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>