force-app/main/default/objects/Case/fields/X12_months_warranty_offered__c.field-meta.xml
<CustomField>
    <fullName>X12_months_warranty_offered__c</fullName>
    <label>12 months warranty offered</label>
    <type>TextArea</type>
</CustomField>