force-app/main/default/objects/Case/fields/Zendesk_Support_Ticket_Created_At__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Support_Ticket_Created_At__c</fullName>
    <description>Creation Time of the Zendesk Support Ticket, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
    <inlineHelpText>Creation Time of the Zendesk Support Ticket</inlineHelpText>
    <label>Zendesk Support Ticket Created At</label>
    <type>DateTime</type>
</CustomField>