force-app/main/default/objects/Case/fields/Zendesk_Support_Ticket_Solved_At__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Support_Ticket_Solved_At__c</fullName>
    <description>Time when the Zendesk Support Ticket Solved At, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
    <inlineHelpText>Time when the Zendesk Support Ticket Solved At</inlineHelpText>
    <label>Zendesk Support Ticket Solved At</label>
    <type>DateTime</type>
</CustomField>