force-app/main/default/objects/Case/fields/Zendesk_Support_Ticket_Tags__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Support_Ticket_Tags__c</fullName>
    <description>Zendesk Support Ticket&apos;s Tag, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
    <inlineHelpText>Zendesk Support Ticket&apos;s Tags</inlineHelpText>
    <label>Zendesk Support Ticket Tag</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>