force-app/main/default/objects/Case/fields/Zendesk_Support_Ticket_URL__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Support_Ticket_URL__c</fullName>
    <description>Zendesk Support Ticket&apos;s URL, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
    <inlineHelpText>Zendesk Support Ticket&apos;s URL</inlineHelpText>
    <label>Zendesk Support Ticket URL</label>
    <type>Url</type>
</CustomField>