force-app/main/default/objects/Case/recordTypes/After_Sales_Management.recordType-meta.xml
<RecordType>
    <fullName>After_Sales_Management</fullName>
    <active>true</active>
    <businessProcess>SSC Support Process</businessProcess>
    <label>SSC - After-Sales Management</label>
</RecordType>