force-app/main/default/objects/Case/recordTypes/BackWatch_Merchant_contact.recordType-meta.xml
<RecordType>
    <fullName>BackWatch_Merchant_contact</fullName>
    <active>true</active>
    <businessProcess>Zendesk Support Process</businessProcess>
    <label>BackWatch - Merchant contact</label>
</RecordType>