force-app/main/default/objects/Case/recordTypes/BM4B_Support_Case.recordType-meta.xml
<RecordType>
    <fullName>BM4B_Support_Case</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <description>Handle BackMarket for Business support cases</description>
    <label>BM4B Support Case</label>
</RecordType>