force-app/main/default/objects/Case/recordTypes/BuyBack_Bill_Process.recordType-meta.xml
<RecordType>
    <fullName>BuyBack_Bill_Process</fullName>
    <active>true</active>
    <businessProcess>BuyBack Bill Process</businessProcess>
    <description>Use this form to kick off a BuyBack Bill Process</description>
    <label>BuyBack Bill Process V1</label>
</RecordType>