force-app/main/default/objects/Case/recordTypes/BuyBack_Bill_Process_V2.recordType-meta.xml
<RecordType>
    <fullName>BuyBack_Bill_Process_V2</fullName>
    <active>true</active>
    <businessProcess>BuyBack Bill Process V2</businessProcess>
    <label>BuyBack Bill Process V2</label>
</RecordType>