force-app/main/default/objects/Case/recordTypes/Customer_Support_Case.recordType-meta.xml
<RecordType>
    <fullName>Customer_Support_Case</fullName>
    <active>true</active>
    <businessProcess>SSC Support Process</businessProcess>
    <label>Customer Support Case</label>
</RecordType>