force-app/main/default/objects/Case/recordTypes/Merchant_Claim.recordType-meta.xml
<RecordType>
    <fullName>Merchant_Claim</fullName>
    <active>true</active>
    <businessProcess>SSC Support Process</businessProcess>
    <description>Handle Exceptional SSC cases created by email-to-case.</description>
    <label>Generic Case</label>
</RecordType>