force-app/main/default/objects/Case/recordTypes/Qualification_Form.recordType-meta.xml
<RecordType>
    <fullName>Qualification_Form</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <label>Qualification Form</label>
</RecordType>