force-app/main/default/objects/Case/recordTypes/Quality_Sales_Performance.recordType-meta.xml
<RecordType>
    <fullName>Quality_Sales_Performance</fullName>
    <active>true</active>
    <businessProcess>SSC Support Process</businessProcess>
    <label>SSC - Quality and Sales Performance</label>
</RecordType>