force-app/main/default/objects/Case/recordTypes/Quality_Support_Cases.recordType-meta.xml
<RecordType>
    <fullName>Quality_Support_Cases</fullName>
    <active>true</active>
    <businessProcess>Quality Support Cases</businessProcess>
    <label>Quality Support Cases</label>
</RecordType>