force-app/main/default/objects/Case/recordTypes/Quality_Test.recordType-meta.xml
<RecordType>
    <fullName>Quality_Test</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <description>Quality Test Correction</description>
    <label>Quality Test - Sales</label>
</RecordType>