force-app/main/default/objects/Case/recordTypes/Quality_Test_Buyback.recordType-meta.xml
<RecordType>
    <fullName>Quality_Test_Buyback</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <label>Quality Test - Buyback</label>
</RecordType>