force-app/main/default/objects/Case/recordTypes/Quality_Test_Language_test.recordType-meta.xml
<RecordType>
    <fullName>Quality_Test_Language_test</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <label>Quality Test - Language test</label>
</RecordType>