force-app/main/default/objects/Case/recordTypes/Quality_Test_US_Sales.recordType-meta.xml
<RecordType>
    <fullName>Quality_Test_US_Sales</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <label>Quality Test - US Sales</label>
</RecordType>