force-app/main/default/objects/Case/recordTypes/Seller_Support_Case.recordType-meta.xml
<RecordType>
    <fullName>Seller_Support_Case</fullName>
    <active>true</active>
    <businessProcess>SSC Support Process</businessProcess>
    <label>Seller Support Case</label>
</RecordType>