force-app/main/default/objects/Case/recordTypes/SSC_Back_Market_Services.recordType-meta.xml
<RecordType>
    <fullName>SSC_Back_Market_Services</fullName>
    <active>true</active>
    <businessProcess>SSC Support Process</businessProcess>
    <label>SSC - Back Market Services</label>
</RecordType>