force-app/main/default/objects/Case/recordTypes/SSC_Back_Office_Integrators_Technical_Support.recordType-meta.xml
<RecordType>
    <fullName>SSC_Back_Office_Integrators_Technical_Support</fullName>
    <active>true</active>
    <businessProcess>SSC Support Process</businessProcess>
    <label>SSC - Back Office, Integrators &amp; Technical Support</label>
</RecordType>