force-app/main/default/objects/Case/recordTypes/SSC_Buyback_only_available_for_EU_sellers.recordType-meta.xml
<RecordType>
    <fullName>SSC_Buyback_only_available_for_EU_sellers</fullName>
    <active>true</active>
    <businessProcess>SSC Support Process</businessProcess>
    <label>SSC - Buyback (only available for EU sellers)</label>
</RecordType>