force-app/main/default/objects/Case/recordTypes/SSC_Catalog.recordType-meta.xml
<RecordType>
    <fullName>SSC_Catalog</fullName>
    <active>true</active>
    <businessProcess>SSC Support Process</businessProcess>
    <label>SSC - Catalog</label>
</RecordType>