force-app/main/default/objects/Case/recordTypes/SSC_Finance_and_Legal.recordType-meta.xml
<RecordType>
    <fullName>SSC_Finance_and_Legal</fullName>
    <active>true</active>
    <businessProcess>SSC Support Process</businessProcess>
    <label>SSC - Finance and Legal</label>
</RecordType>