force-app/main/default/objects/Case/validationRules/BuyBack_Bill_Pocess_Bill_Information.validationRule-meta.xml
<ValidationRule>
    <fullName>BuyBack_Bill_Pocess_Bill_Information</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( $User.ByPassValidationRules__c ),
RecordType.DeveloperName =&quot;BuyBack_Bill_Process&quot; ,
Bill_Sent__c =TRUE,
OR(
ISBLANK( Bill_Amount__c),
ISBLANK( Bill_Name__c )))</errorConditionFormula>
    <errorMessage>Please add Bill Name and Amount.</errorMessage>
</ValidationRule>