force-app/main/default/objects/Case/validationRules/BuyBack_Bill_Pocess_Prevent_StatusChange.validationRule-meta.xml
<ValidationRule>
    <fullName>BuyBack_Bill_Pocess_Prevent_StatusChange</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($User.ByPassValidationRules__c ),
RecordType.DeveloperName =&quot;BuyBack_Bill_Process&quot; ,
ISCHANGED( Status ),
OR(ISPICKVAL(Status,&quot;Bill Paid&quot;),ISPICKVAL(Status,&quot;Dead Bill&quot;)),
$User.X18_Digit_ID__c  &lt;&gt; $Setup.UserID__c.Cyriac_Bar__c  ,
$User.X18_Digit_ID__c &lt;&gt; $Setup.UserID__c.Mathilde_Quenu__c  )</errorConditionFormula>
    <errorMessage>You don&apos;t have the permission to close this case.</errorMessage>
</ValidationRule>