force-app/main/default/objects/Case/validationRules/BuyBack_Bill_Pocess_SEPA_Offline.validationRule-meta.xml
<ValidationRule>
    <fullName>BuyBack_Bill_Pocess_SEPA_Offline</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( $User.ByPassValidationRules__c ),
RecordType.DeveloperName =&quot;BuyBack_Bill_Process&quot; ,
Proof_of_Payment_Received__c  =TRUE,
SEPA_Offline__c =TRUE)</errorConditionFormula>
    <errorDisplayField>SEPA_Offline__c</errorDisplayField>
    <errorMessage>In order to be able to mark this field as TRUE, SEPA must be set to online in BO, and the SEPA Offline field set to FALSE in Salesforce.</errorMessage>
</ValidationRule>