force-app/main/default/objects/Case/validationRules/BuyBack_Bill_Pocess_SEPA_Offline_TRUE.validationRule-meta.xml
<ValidationRule>
    <fullName>BuyBack_Bill_Pocess_SEPA_Offline_TRUE</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( $User.ByPassValidationRules__c ),
ISNEW(),
OR(RecordType.DeveloperName =&quot;BuyBack_Bill_Process&quot; ,RecordType.DeveloperName =&quot;BuyBack_Bill_Process_V2&quot;),
SEPA_Offline__c =FALSE)</errorConditionFormula>
    <errorDisplayField>SEPA_Offline__c</errorDisplayField>
    <errorMessage>Please turn off SEPA in &quot;Administrer&quot; page and tick the box &quot;SEPA Offline&quot;.</errorMessage>
</ValidationRule>