force-app/main/default/objects/Case/validationRules/BuyBack_Bill_Pocess_SEPA_Offline_V2.validationRule-meta.xml
<ValidationRule>
    <fullName>BuyBack_Bill_Pocess_SEPA_Offline_V2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( $User.ByPassValidationRules__c ),
RecordType.DeveloperName =&quot;BuyBack_Bill_Process_V2&quot; ,
ISPICKVAL(Status,&quot;Bill Paid&quot;) ,
SEPA_Offline__c =TRUE)</errorConditionFormula>
    <errorDisplayField>SEPA_Offline__c</errorDisplayField>
    <errorMessage>In order to be able to close this case, SEPA must be set to online in BO, and the SEPA Offline field set to FALSE in Salesforce.</errorMessage>
</ValidationRule>