force-app/main/default/objects/Case/validationRules/Buyback_Bill_Process_Require_Bill_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Buyback_Bill_Process_Require_Bill_Amount</fullName>
    <active>true</active>
    <description>Bill amount is required to be able to move case to In progress or Closed.</description>
    <errorConditionFormula>AND(
ISBLANK(  Bill_Amount__c  ),
OR( 
ISPICKVAL (Status ,&quot;Chargeback in Progress&quot;),
ISPICKVAL (Status ,&quot;Bill Paid&quot;),
ISPICKVAL (Status ,&quot;Dead Bill&quot;)))</errorConditionFormula>
    <errorDisplayField>Bill_Amount__c</errorDisplayField>
    <errorMessage>Please add Bill Amount to be able to move this case to the following stage.</errorMessage>
</ValidationRule>