force-app/main/default/objects/Case/validationRules/VR_CHANGE_STAGE.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CHANGE_STAGE</fullName>
    <active>true</active>
    <description>You can&apos;t change the stage when the case is closed</description>
    <errorConditionFormula>AND(NOT( $User.ByPassValidationRules__c ),
 ISPICKVAL( Status , &apos;Closed&apos;),
ISCHANGED( Stage__c  ))</errorConditionFormula>
    <errorMessage>You can&apos;t change the stage when the case is closed</errorMessage>
</ValidationRule>