force-app/main/default/objects/Case/validationRules/VR_CLOSED_CLAIM.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CLOSED_CLAIM</fullName>
    <active>true</active>
    <description>Please fill in a typology before closing the claim</description>
    <errorConditionFormula>AND(NOT( $User.ByPassValidationRules__c ),
( ISPICKVAL( Stage__c ,&apos;Closed&apos;)), ( ISBLANK( Typology_of_claim__c )))</errorConditionFormula>
    <errorDisplayField>Typology_of_claim__c</errorDisplayField>
    <errorMessage>Please fill in a typology before closing the claim</errorMessage>
</ValidationRule>