force-app/main/default/objects/Case/listViews/All_cases_BackPack_Support.listView-meta.xml
<ListView>
    <fullName>All_cases_BackPack_Support</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Assignee__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Queue</filterScope>
    <label>📦 All cases - BackPack Support</label>
    <queue>Back_Pack_Support</queue>
    <sharedTo>
        <group>SSC_BackPack</group>
    </sharedTo>
</ListView>