force-app/main/default/objects/Case/listViews/All_cases_BackParts_Support.listView-meta.xml
<ListView>
    <fullName>All_cases_BackParts_Support</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Assignee__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>🔋 All cases - BackParts Support</label>
    <queue>Back_Parts_Support</queue>
    <sharedTo>
        <group>SSC_BackParts</group>
    </sharedTo>
</ListView>